# EELISA-GreenAI-HandTracking

./: .gitignore  .gitmodules  README.md  pyproject.toml
XGBoostModel/: PredictionModelNoSpike.json  PredictionModelWithSpike.json  inference_example.py  modelTraining.py  requirements.txt  scalerNoSpike.pkl  scalerWithSpike.pkl
XGBoostModel/Experimental octave grid optimization/: modelTraining.py
XGBoostModel/data/: parsed_data.csv  parsed_spikes_data_total.csv
src/: data_sending.py  encoding.py  leap_lts_demo.py  lts_gui_demo.py  lts_neuron.py  net.m  precompute_dataset.py  record_data.py
src/GUI/: .gitignore  hand_tracking_gui.py  simple_gui.py
src/XGBoostModel/: inference_example.py  modelTraining.py  requirements.txt
src/XGBoostModel/NoSpike/: inferenceNoSpike.py  inferenceSimpleGUI.py
src/XGBoostModel/Spikes/: inferenceSimpleGUI.py  inferenceSpikes.py
src/common/: model_utils.py
src/data-collection/: data_sending.py  precompute_dataset.py  record_data.py
src/example/: receiver_template.py  sender_template.py  udp_example.py
src/spikes/: encoding.py  leap_lts_core.py  leap_lts_demo.py  lts_gui_demo.py  lts_neuron.py  neuron_data_collection.py  process_data.py  read_spikes.py  spike_sender_udp.py  visualize_data.py
src/udp/: __init__.py  config.config  config.py  datastore.py  receiver.py  sender.py
