[project]
name = "eelisa-greenai-handtracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "leap",
    "cffi>=1.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
]

[tool.uv.sources]
leap = { path = "src/leapc-python-bindings/leapc-python-api" }
